added draft branch + new article

--- a/blog_src/themes/hugolb/static/css/hugolb.css
+++ b/blog_src/themes/hugolb/static/css/hugolb.css
@@ -83,6 +83,9 @@ html, body {
     display: inline-block;
     text-align: justify;
 }
+.content * {
+    word-wrap: break-word;
+}
 .content .post-title {
     text-align: left;
 }
