--- a/blog_src/themes/hugolb/layouts/partials/header.html
+++ b/blog_src/themes/hugolb/layouts/partials/header.html
@@ -16,6 +16,9 @@
             <script type="text/javascript" async
                 src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
             </script>
+            <script type="text/x-mathjax-config">
+                MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "AMS"} } });
+            </script>
         {{end}}
     {{end}}
     <link rel="stylesheet" type="text/css" href="/css/hugolb.css">
