--- a/themes/hugolb/layouts/_default/meta.html
+++ b/themes/hugolb/layouts/_default/meta.html
@@ -1,5 +1,5 @@
 <div class="post-summary">
-    <h3 class="post-title"><a href="{{.Permalink}}">{{.Title}}</a></h3>
+    <h3 class="post-title"><a href="{{.RelPermalink}}">{{.Title}}</a></h3>
     <div class="front-matter">
         <em>{{dateFormat "Monday, Jan 2, 2006" .Date}}</em> | {{.ReadingTime}} min read
         {{range $k, $v := .Site.Taxonomies}}
