--- a/themes/hugolb/layouts/partials/footer.html
+++ b/themes/hugolb/layouts/partials/footer.html
@@ -1,6 +1,7 @@
     <div class="footer">
         <div class="copyright">© {{.Site.Copyright}}</div>
     </div>
-</div>
+<!-- ending container div from header -->
+</div> 
 </body>
 </html>
