--- a/themes/hugolb/layouts/_default/single.html
+++ b/themes/hugolb/layouts/_default/single.html
@@ -7,7 +7,8 @@
     {{end}}
     {{.Content}}
     <br/>
-    {{partial "navigation.html" .}}
+    {{partial "single_navigation.html" .}}
+    <br/>
 </div>
 {{partial "sidebar.html" .}}
 {{partial "footer.html" .}}
