--- a/themes/hugolb/layouts/partials/frontmatter.html
+++ b/themes/hugolb/layouts/partials/frontmatter.html
@@ -10,7 +10,7 @@
             {{if (gt (len (index $.Params $k)) 0)}}
                 <br/>{{$k | humanize}}:
                     {{range (index $.Params $k)}}
-                        <a href="/{{$k}}/{{. | urlize}}">{{. | humanize}}</a>,
+                        <a href="/{{$k}}/{{. | urlize}}">{{.}}</a>,
                     {{end}}
             {{end}}
         {{end}}
