--- a/themes/hugolb/layouts/project/project.html
+++ b/themes/hugolb/layouts/project/project.html
@@ -1,33 +1,26 @@
-<!-- lists posts by section/taxonomy -->
 {{partial "header.html" .}}
-<div class="content">
-
+{{partial "sidebar.html" .}}
+<div class="content grid">
     <h1 class="page-title">
-        <!-- If list is of a taxonomy e.g. /categories or /tags, 
-             show as "taxonomy -> term -->
-        {{if eq .Kind "taxonomy"}}
-            {{.Data.Plural | humanize | title}} → 
+        {{if .Title}}
+            {{.Title}}
+        {{else}}
+            {{.Type | pluralize | humanize}}
         {{end}}
-        <!-- Name of list e.g. "Post" or "Engineering" -->
-        {{.Title}}
     </h1>
-
-    <!-- Anything written in "_index.md" for a particular SECTION listing. -->
-    {{ .Content }}
+    {{.Content}}
 
     <!-- break down posts into pages -->
     <!-- each section list only shows pages in that section directory or
     with an explicit "type=SECION" in front matter -->
     {{ $paginator := .Paginate (.Data.Pages) }}
     {{ range $paginator.Pages }}
-        {{.Render "meta"}}
+        {{.Render "summary"}}
     {{ end }}
     <br/>
+
     <!-- passes a dict with "context" and "paginator" keys -->
     {{partial "list_navigation.html" (dict "context" . "paginator" $paginator) }}
     <br/>
-    
-
 </div>
-{{partial "sidebar.html" .}}
 {{partial "footer.html" .}}
