--- a/themes/hugolb/layouts/taxonomy/series.html
+++ b/themes/hugolb/layouts/taxonomy/series.html
@@ -1,27 +1,28 @@
+<!-- lists posts by series -->
 {{partial "header.html" .}}
-{{partial "sidebar.html" .}}
-<div class="content grid">
+<div class="content">
+
     <h1 class="page-title">
-        {{if .Title}}
-            {{.Title}}
-        {{else}}
-            {{.Type | pluralize | humanize}}
-        {{end}}
+        <!-- Series: SERIES NAME -->
+            {{.Data.Plural | humanize}}: {{.Title}}
     </h1>
-    {{.Content}}
-    <!-- {{range .Data.Pages}}
-        {{.Render "summary"}}
-    {{end}} -->
+
+    <!-- Anything written in "_index.md" for a particular listing. -->
+    {{ .Content }}
+
     <!-- break down posts into pages -->
     <!-- each section list only shows pages in that section directory or
     with an explicit "type=SECION" in front matter -->
-    {{ $paginator := .Paginate (.Data.Pages) }}
+    {{ $paginator := .Paginate (.Data.Pages.Reverse) }}
     {{ range $paginator.Pages }}
-        {{.Render "summary"}}
+        {{.Render "meta"}}
     {{ end }}
     <br/>
     <!-- passes a dict with "context" and "paginator" keys -->
     {{partial "list_navigation.html" (dict "context" . "paginator" $paginator) }}
     <br/>
+    
+
 </div>
+{{partial "sidebar.html" .}}
 {{partial "footer.html" .}}
