--- a/themes/hugolb/layouts/_default/single.html
+++ b/themes/hugolb/layouts/_default/single.html
@@ -5,6 +5,7 @@
     {{ if .Params.link}}
         <blockquote>{{.Type | humanize}} hosted at: <a href="{{.Params.link}}">{{.Params.link}}</a></blockquote>
     {{end}}
+    <!-- {{.TableOfContents}} -->
     {{.Content}}
     <br/>
     {{partial "single_navigation.html" .}}
