--- a/themes/hugolb/layouts/_default/summary.html
+++ b/themes/hugolb/layouts/_default/summary.html
@@ -1,11 +1,21 @@
-<div class="post-summary">
-    <h3 class="post-title"><a href="{{.Permalink}}">{{.Title}}</a></h3>
-    <div class="front-matter">
-        <em>{{dateFormat "Monday, Jan 2, 2006" .Date}}</em> | {{.ReadingTime}} min read
+<div class="summary {{.Section}}">
+    <div class="image"
+        {{if .Params.image}}
+            style="background-image: url('{{.Params.image}}')"
+        {{else}}
+            style="background-image: url('{{.Site.Params.defaultpostimg}}')"
+        {{end}}>
     </div>
-    {{if (gt (len .Params.description) 0)}}
-        {{.Params.description}}
-    {{else}}
-        {{.Summary}}
-    {{end}}
+    <div class="description">
+        <h3 class="post-title"><a href="{{.Permalink}}">{{.Title}}</a></h3>
+        <div class="front-matter">
+            <em>{{dateFormat "Monday, Jan 2, 2006" .Date}}</em> | {{.ReadingTime}} min read
+            {{ partial "taxonomies.html" . }}
+        </div>
+        {{if .Params.description }}
+            {{.Params.description}}
+        {{else}}
+            {{.Summary}}
+        {{end}}
+    </div>
 </div>
