--- a/themes/hugolb/layouts/_default/list.html
+++ b/themes/hugolb/layouts/_default/list.html
@@ -16,6 +16,7 @@
     {{ .Content }}
 
     <!-- Any sub-sections -->
+    {{ if (gt (len .Sections) 0) }}
     <ul class="sections-list">
         {{ range $s := .Sections}}
             <a href="{{$s.RelPermalink}}">
@@ -24,17 +25,20 @@
             </li></a>
         {{ end }}
     </ul>
+    {{ end }}
 
     <!-- break down posts into pages -->
     <!-- each section list only shows pages in that section directory or
     with an explicit "type=SECION" in front matter -->
-    {{ $paginator := .Paginate (.Data.Pages) }}
+    {{ $paginator := .Paginate (.RegularPages) }}
     {{ range $paginator.Pages }}
         {{.Render "summary"}}
     {{ end }}
     <br/>
     <!-- passes a dict with "context" and "paginator" keys -->
-    {{partial "list_navigation.html" (dict "context" . "paginator" $paginator) }}
+    {{ if gt (len $paginator.Pagers) 1 }}
+        {{partial "list_navigation.html" (dict "context" . "paginator" $paginator) }}
+    {{ end }}
     <br/>
     
 
