--- a/themes/hugolb/layouts/index.html
+++ b/themes/hugolb/layouts/index.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="content">
-    {{range first 10 .Data.Pages}}
+    {{range first 10 .Site.RegularPages}}
         {{.Render "summary"}}
     {{end}}
 </div>
