added table of contents, aside shortcodes

--- a/themes/hugolb/layouts/index.html
+++ b/themes/hugolb/layouts/index.html
@@ -10,6 +10,9 @@
                 <a href="{{.URL}}"><img src="{{.image}}"/></a>
             {{end}}
         </div>
+        <div class="content">
+            {{.Content}}
+        </div>
     </div>
 </div>
 <div class="content">
