--- a/themes/hugolb/layouts/_default/list.html
+++ b/themes/hugolb/layouts/_default/list.html
@@ -1,5 +1,5 @@
+{{define "main"}}
 <!-- lists posts by section/taxonomy -->
-{{partial "header.html" .}}
 <div class="content">
 
     <h1 class="page-title">
@@ -17,20 +17,23 @@
 
     <!-- Any sub-sections -->
     {{ if (gt (len .Sections) 0) }}
-    <ul class="sections-list">
-        {{ range $s := .Sections}}
-            <a href="{{$s.RelPermalink}}">
-            <li class="terms">
-                {{ $s.Name }} ({{ len $s.Pages }})
-            </li></a>
-        {{ end }}
-    </ul>
+    <details open>
+        <summary><strong>Subsections</strong></summary>
+        <ul class="sections-list">
+            {{ range $s := .Sections}}
+                <a href="{{$s.RelPermalink}}">
+                <li class="terms">
+                    {{ $s.Name }} ({{ len $s.Pages }})
+                </li></a>
+            {{ end }}
+        </ul>
+    </details>
     {{ end }}
 
     <!-- break down posts into pages -->
     <!-- each section list only shows pages in that section directory or
     with an explicit "type=SECION" in front matter -->
-    {{ $paginator := .Paginate (.RegularPages) }}
+    {{ $paginator := .Paginate (.RegularPagesRecursive) }}
     {{ range $paginator.Pages }}
         {{.Render "summary"}}
     {{ end }}
@@ -40,8 +43,5 @@
         {{partial "list_navigation.html" (dict "context" . "paginator" $paginator) }}
     {{ end }}
     <br/>
-    
-
 </div>
-{{partial "sidebar.html" .}}
-{{partial "footer.html" .}}
+{{end}}
