--- a/themes/hugolb/layouts/_default/single.html
+++ b/themes/hugolb/layouts/_default/single.html
@@ -1,15 +1,14 @@
-{{partial "header.html" .}}
-<div class="content">
+{{define "main"}}
+<article class="content">
     <h1 class="post-title">{{.Title}}</h1>
     {{partial "frontmatter.html" .}}
     {{ if .Params.link}}
         <blockquote>{{.Type | humanize}} hosted at: <a href="{{.Params.link}}">{{.Params.link}}</a></blockquote>
     {{end}}
-    <!-- {{.TableOfContents}} -->
+    {{partial "tableofcontents.html" .}}
     {{.Content}}
     <br/>
     {{partial "single_navigation.html" .}}
     <br/>
-</div>
-{{partial "sidebar.html" .}}
-{{partial "footer.html" .}}
+</article>
+{{end}}
