--- a/themes/hugolb/layouts/_default/terms.html
+++ b/themes/hugolb/layouts/_default/terms.html
@@ -1,6 +1,5 @@
+{{define "main"}}
 <!-- renders terms in each taxonomy e.g. terms in "tags" -->
-{{partial "header.html" .}}
-
 <div class="content">
     <h1 class="page-title">{{.Data.Plural | humanize}}</h1>
     <ul class="terms-list">
@@ -12,6 +11,4 @@
         {{ end }}
     </ul>
 </div>
-
-{{partial "sidebar.html" .}}
-{{partial "footer.html" .}}
+{{end}}
