--- a/themes/hugolb/layouts/partials/header.html
+++ b/themes/hugolb/layouts/partials/header.html
@@ -24,26 +24,17 @@
 
     <!-- for regular content pages, include styles and scripts -->
     {{ if .IsPage }}
-        <!-- include code highlighting -->
-        {{ if .Params.hascode }}
-            <script src="/js/highlight/highlight.pack.js"></script>
-            <link rel="stylesheet" type="text/css" href="/css/solarized-light.css">
-            <script>hljs.initHighlightingOnLoad();</script>
-        {{ end }}
         <!-- include mathjax for equation formatting -->
         {{ if .Params.hasequations }}
-            <script type="text/javascript" async
-                src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_CHTML">
-            </script>
-            <script type="text/x-mathjax-config">
-                MathJax.Hub.Config({ 
-                    TeX: { equationNumbers: {autoNumber: "AMS"} },
-                    tex2jax: {
-                        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-                        processEscapes: true
-                    } 
-                });
-            </script>
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css" integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
+            <!-- The loading of KaTeX is deferred to speed up page rendering -->
+            <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js" integrity="sha384-YNHdsYkH6gMx9y3mRkmcJ2mFUjTd0qNQQvY9VYZgQd7DcN7env35GzlmFaZ23JGp" crossorigin="anonymous"></script>
+            <!-- To automatically render math in text elements, include the auto-render extension: -->
+            <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js" integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl" crossorigin="anonymous"
+                onload="renderMathInElement(document.body, {delimiters: [
+                    {left: '$$', right: '$$', display: true},
+                  {left: '$', right: '$', display: false}
+                ]});"></script>
         {{ end }}
         <!-- include additional js files -->
         {{ range .Params.includes }}
@@ -61,7 +52,11 @@
 	    <script src="/js/resume.js"></script>
     {{ end }}
 
-    <title>{{ .Title }}</title>
+    {{ if .IsHome }}
+        <title>{{ .Title }}</title>
+    {{ else }}
+        <title>{{.Site.Title}}: {{ .Title }}</title>
+    {{ end }}
 </head>
 <body>
     <!-- container dive is closed in footer partial -->
