--- a/themes/hugolb/layouts/resume/resume.html
+++ b/themes/hugolb/layouts/resume/resume.html
@@ -1,6 +1,5 @@
-{{partial "header.html" .}}
-{{partial "sidebar.html" .}}
+{{define "main"}}
 <div class="resume" ng-controller="resumeController">
     {{readFile "themes/hugolb/static/ng-template/resume.html" | safeHTML}}
 </div>
-{{partial "footer.html" .}}
+{{end}}
