--- a/themes/hugolb/layouts/partials/header.html
+++ b/themes/hugolb/layouts/partials/header.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html {{ if eq .Section "resume" }} ng-app=Resume {{end}}>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ partial "meta.html" . }}
 
     <link rel="stylesheet" type="text/css" href="/css/hugolb.css">
     <link rel="stylesheet" type="text/css" href="/css/cosmetic.css">
