--- a/themes/hugolb/layouts/partials/header.html
+++ b/themes/hugolb/layouts/partials/header.html
@@ -2,7 +2,9 @@
 <html {{ if eq .Section "resume" }} ng-app=Resume {{end}}>
 <head>
     {{ partial "meta_header.html" . }}
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/hugolb.css">
     <link rel="stylesheet" type="text/css" href="/css/cosmetic.css">
 
