--- a/themes/hugolb/layouts/index.html
+++ b/themes/hugolb/layouts/index.html
@@ -16,9 +16,14 @@
     </div>
 </div>
 <div class="content">
-    {{range first 10 .Site.RegularPages}}
+    <!-- {{range first 10 .Site.RegularPages}}
         {{.Render "summary"}}
-    {{end}}
+    {{end}} -->
+    <!-- render the abot/index.md page -->
+    
+    <a class="twitter-timeline" data-height="512" data-theme="light" href="https://twitter.com/hazrmard?ref_src=twsrc%5Etfw">Tweets by hazrmard</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </div>
 {{partial "sidebar.html" .}}
 {{partial "footer.html" .}}
+`
