aschanged config file name, added disqus

--- a/themes/hugolb/layouts/_default/single.html
+++ b/themes/hugolb/layouts/_default/single.html
@@ -12,5 +12,7 @@
     <br/>
     {{partial "single_navigation.html" .}}
     <br/>
+    <div class="comments">
+        {{ template "_internal/disqus.html" . }}
 </article>
 {{end}}
